--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.4.4",
+    "github-markdown-css": "^3.0.1",
     "highlight.js": "^9.18.0",
     "html-loader": "^0.5.5",
     "markdown-loader": "^5.1.0",
